# validador-automacoes-empresariais

./: README.md  config.py  main.py  pyproject.toml
app/: itau.py  mercado_pago.py  nubank.py  redecard.py  safra.py  skypostal.py
documentacao/: documentacao_automacoes_v1.docx
rpa/: driver.py  driver_safra.py  enviar_arquivo_ga.py  extrator_arquivo_safra.py  extrator_planilha_ga.py
rpa/autenticadores/: login_ga.py  login_safra.py
scheduler/: agenda.py  agendador.py  tarefas.py
src/carregamento/: leitor_planilha.py
src/email/: disparador_email.py
src/itau/: gerador.py  validador.py
src/mercado_pago/: gerador.py  validador.py
src/nubank/: gerador.py
src/redecard/: gerador.py
src/skypostal/: gerador.py  validador.py
utils/: anexo_email.py  base_relatorio.py  formatter.py  gerenciador_arquivos.py
